--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.3",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
     "postcss": "^8.5.3",
